add random background color

--- a/simple-login-form/index.html
+++ b/simple-login-form/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js tutorial</title>
+    <title>Login</title>
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body class="random-color">
 <form class="login-form">
     <label for="username">
-        <input type="text" placeholder="username" id="username" class="input" onkeydown="usernameKeyPress()">
+        <input type="text" placeholder="username" id="username" class="input">
     </label>
     <span class="error-message"></span>
     <label for="password">
-        <input type="password" placeholder="password" id="password" class="input" onkeydown="passwordKeyPress()">
+        <input type="password" placeholder="password" id="password" class="input">
     </label>
     <span class="error-message"></span>
 
     <label for="button">
-        <input type="button" value="Login" id="button" onclick="validate()">
+        <input type="button" value="Login" id="button">
     </label>
     <p>
         Not Registered? <a href="#"> create a account</a>
