complete the project

--- a/keyCode/index.html
+++ b/keyCode/index.html
@@ -18,28 +18,48 @@
     </header>
     <main class="main-body">
         <h1 class="main-body__title">java script key code</h1>
-        <div class="main-body__content" style="display: none">
+        <div class="main-body__content">
             Press any key to get the JavaScript event keycode info
         </div>
 
-        <div class="information-boxes">
-            <div class="information-box">
-                <h6 class="information-box__title">event.key</h6>
-                <div class="information-box__content">f</div>
+        <div class="information">
+            <div class="big-number">
+                10
             </div>
-            <div class="information-box">
-                <h6 class="information-box__title">event.key</h6>
-                <div class="information-box__content">f</div>
-            </div>
-            <div class="information-box">
-                <h6 class="information-box__title">event.key</h6>
-                <div class="information-box__content">f</div>
-            </div>
-            <div class="information-box">
-                <h6 class="information-box__title">event.key</h6>
-                <div class="information-box__content">f</div>
+
+            <p>key code information</p>
+
+            <div class="information-boxes">
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+
+                <div class="information-box">
+                    <h6 class="information-box__title">event.key</h6>
+                    <div class="information-box__content">f</div>
+                </div>
+
             </div>
         </div>
+
     </main>
 
     <footer class="main-footer">
